--- a/nos_services.html
+++ b/nos_services.html
@@ -31,7 +31,8 @@
     <div class="navbar-container">
         <div class="flex items-center gap-4">
             <!-- Logo -->
-            <img src="assets/images/logo.png" alt="Melon-Soft Logo" class="navbar-logo" />
+            <img src="assets/images/logo/logo_bleu.svg" alt="Melon-Soft Logo" class="navbar-logo dark:hidden" />
+            <img src="assets/images/logo/logo_jaune.svg" alt="Melon-Soft Logo" class="navbar-logo hidden dark:block" />
         </div>
         
         <nav class="navbar-nav">
@@ -114,7 +115,7 @@
             <!-- Column 1 -->
             <div class="flex flex-col gap-6">
                 <div class="flex items-center gap-3">
-                    <img src="assets/images/logo1.png" alt="Melon-Soft Logo" class="w-10 h-10 object-contain rounded" />
+                    <img src="assets/images/logo/logo_jaune.svg" alt="Melon-Soft Logo" class="w-10 h-10 object-contain" />
                     <span class="font-black text-xl tracking-tight text-white uppercase">Melon-Soft</span>
                 </div>
                 <p class="text-gray-400 text-sm leading-relaxed">
