refactor: restructure project and add data models
- Update main pages (index.html, apropos.html)
- Remove obsolete documentation and test files
- Add comprehensive data models for backend functionality
- Update package dependencies
- Clean up project structure

--- a/index.html
+++ b/index.html
@@ -185,13 +185,13 @@
                         </div>
                         <!-- Années d'expérience -->
                         <div class="flex flex-col items-center text-center gap-2 p-4 rounded-xl bg-white/10 backdrop-blur-sm hover:bg-white/20 transition-all duration-300">
-                            <div class="text-4xl md:text-5xl font-black text-accent-yellow mb-2">10+</div>
+                            <div class="text-4xl md:text-5xl font-black text-accent-yellow mb-2">8+</div>
                             <div class="text-sm md:text-base font-semibold text-white">Années</div>
                             <div class="text-xs text-primary-light">D'expérience</div>
                         </div>
                         <!-- Projets réalisés -->
                         <div class="flex flex-col items-center text-center gap-2 p-4 rounded-xl bg-white/10 backdrop-blur-sm hover:bg-white/20 transition-all duration-300">
-                            <div class="text-4xl md:text-5xl font-black text-accent-yellow mb-2">500+</div>
+                            <div class="text-4xl md:text-5xl font-black text-accent-yellow mb-2">101+</div>
                             <div class="text-sm md:text-base font-semibold text-white">Projets</div>
                             <div class="text-xs text-primary-light">Livrés avec succès</div>
                         </div>
@@ -206,7 +206,7 @@
             </section>
 
             <section class="relative flex h-auto min-h-screen w-full flex-col group/design-root overflow-x-hidden">
-                <div class="w-full pb-8">
+                <div class="w-full pb-2">
                     <div class="layout-container flex flex-col items-center justify-center px-4 lg:px-40 pt-8 pb-8">
                         <div class="text-center">
                             <h2
@@ -218,16 +218,6 @@
                                 Solutions numériques complètes pour propulser votre entreprise en RDC. Du développement
                                 sur mesure à la cybersécurité, nous transformons vos idées en réalité digitale.
                             </p>
-                            <div class="flex gap-4 pt-4 flex-wrap justify-center">
-                                <button onclick="window.location.href='developpement_informatique.html'"
-                                    class="flex min-w-[84px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-12 px-6 bg-primary text-white text-base font-bold leading-normal tracking-[0.015em] hover:bg-primary/90 transition-colors border-2 border-transparent">
-                                    <span class="truncate">Explorer nos solutions</span>
-                                </button>
-                                <button onclick="window.location.href='nous_contacter.html'"
-                                    class="flex h-12 cursor-pointer items-center justify-center rounded-lg border border-[#e5e7eb] bg-white px-6 text-base font-bold text-text-dark transition-all hover:bg-[#f9fafb] hover:border-primary/50 dark:border-[#2a303c] dark:bg-primary dark:text-white dark:hover:bg-primary-dark">
-                                    Contactez-nous
-                                </button>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -611,7 +601,7 @@
             </section>
 
             <!-- Section Logos Clients -->
-            <section class="flex flex-col items-center justify-center bg-background-light dark:bg-background-dark px-4 py-8 lg:px-20 lg:py-12 overflow-hidden">
+            <section class="flex flex-col items-center bg-gray-50 justify-center bg-background-light dark:bg-background-dark px-4 py-8 lg:px-20 lg:py-12 overflow-hidden">
                 <div class="mx-auto flex w-full max-w-[1280px] flex-col gap-4">
                     <div class="text-center mb-4">
                         <h2 class="text-2xl font-black leading-tight text-text-dark dark:text-accent-yellow sm:text-3xl mb-2">
@@ -798,53 +788,6 @@
                 </div>
             </section>
 
-            <section
-                class="flex flex-col items-center justify-center bg-background-light px-4 py-20 dark:bg-[#0d121c] lg:px-20">
-                <div class="mx-auto flex w-full max-w-[1280px] flex-col gap-10">
-                    <div class="text-center">
-                        <h2 class="text-3xl font-black leading-tight text-text-dark dark:text-white sm:text-4xl">Nos
-                            Valeurs Fondamentales</h2>
-                        <p class="mt-4 text-text-grey dark:text-gray-400">Ce qui nous distingue sur le marché numérique.
-                        </p>
-                    </div>
-                    <div class="grid grid-cols-1 gap-8 md:grid-cols-3">
-                        <div class="flex flex-col items-center text-center gap-4 p-4">
-                            <div
-                                class="flex size-16 items-center justify-center rounded-full bg-white dark:bg-[#1a2230] text-primary mb-2 shadow-sm">
-                                <span class="material-symbols-outlined text-4xl">map</span>
-                            </div>
-                            <h3 class="text-xl font-bold text-text-dark dark:text-white">Expertise Locale</h3>
-                            <p class="text-sm text-text-grey dark:text-gray-400 leading-relaxed">
-                                Une compréhension profonde des défis techniques et infrastructurels spécifiques à la
-                                RDC, garantissant des solutions adaptées.
-                            </p>
-                        </div>
-                        <div class="flex flex-col items-center text-center gap-4 p-4">
-                            <div
-                                class="flex size-16 items-center justify-center rounded-full bg-white dark:bg-[#1a2230] text-primary mb-2 shadow-sm">
-                                <span class="material-symbols-outlined text-4xl">verified_user</span>
-                            </div>
-                            <h3 class="text-xl font-bold text-text-dark dark:text-white">Fiabilité Absolue</h3>
-                            <p class="text-sm text-text-grey dark:text-gray-400 leading-relaxed">
-                                Nous respectons scrupuleusement les délais et livrons des logiciels robustes, sécurisés
-                                et testés rigoureusement.
-                            </p>
-                        </div>
-                        <div class="flex flex-col items-center text-center gap-4 p-4">
-                            <div
-                                class="flex size-16 items-center justify-center rounded-full bg-white dark:bg-[#1a2230] text-primary mb-2 shadow-sm">
-                                <span class="material-symbols-outlined text-4xl">lightbulb</span>
-                            </div>
-                            <h3 class="text-xl font-bold text-text-dark dark:text-white">Innovation Continue</h3>
-                            <p class="text-sm text-text-grey dark:text-gray-400 leading-relaxed">
-                                L'utilisation des dernières technologies (Cloud, IA, Mobile) pour donner un avantage
-                                concurrentiel décisif à votre business.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
             <section class="bg-primary px-4 py-20 lg:px-20 text-white relative overflow-hidden">
                 <div class="mx-auto flex w-full max-w-[1280px] flex-col items-center gap-8 text-center relative z-10">
                     <h2 class="max-w-3xl text-3xl font-black leading-tight sm:text-5xl">
@@ -863,7 +806,7 @@
                 </div>
             </section>
 
-            <section class="flex flex-col justify-center bg-white px-4 py-20 dark:bg-background-dark lg:px-20" id="faq">
+            <section class="flex flex-col bg-gray-50 justify-center px-4 py-20 dark:bg-background-dark lg:px-20" id="faq">
                 <div class="mx-auto flex w-full max-w-[1280px] flex-col gap-12">
                     <div class="text-center">
                         <div
@@ -1061,9 +1004,9 @@
                 </div>
             </section>
 
-            <div class="px-4 md:px-40 py-10 bg-white dark:bg-[#101622] border-t border-[#f0f2f4] dark:border-gray-800">
+            <div class="px-4 md:px-40 py-10 bg-yellow-50 dark:bg-[#101622] border-t border-[#f0f2f4] dark:border-gray-800">
                 <div class="flex flex-col items-center justify-center gap-6 text-center max-w-[800px] mx-auto">
-                    <div class="rounded-full bg-blue-50 dark:bg-blue-900/20 p-4">
+                    <div class="rounded-full bg-yellow dark:bg-blue-900/20 p-4">
                         <span class="material-symbols-outlined text-primary text-4xl">support_agent</span>
                     </div>
                     <h2 class="text-text-dark dark:text-accent-yellow text-3xl font-bold leading-tight">
@@ -1078,10 +1021,6 @@
                             class="flex min-w-[160px] cursor-pointer items-center justify-center rounded-lg h-12 px-6 bg-primary text-white text-base font-bold leading-normal hover:bg-primary-dark transition-colors shadow-lg shadow-primary/20">
                             Contacter le support
                         </button>
-                        <!-- <button
-                            class="flex min-w-[160px] cursor-pointer items-center justify-center rounded-lg h-12 px-6 bg-white dark:bg-transparent border border-[#dbdfe6] dark:border-gray-600 text-[#111318] dark:text-white text-base font-bold leading-normal hover:bg-gray-50 dark:hover:bg-gray-800 transition-colors">
-                            Appeler +243 99 710 20 12
-                        </button> -->
                     </div>
                 </div>
             </div>
