--- a/apropos.html
+++ b/apropos.html
@@ -200,7 +200,7 @@
                 </div>
             </section>
 
-            <section class="bg-background-light dark:bg-background-dark px-4 py-16 lg:px-20 lg:py-20">
+            <section class="bg-gray-50 bg-background-light dark:bg-background-dark px-4 py-16 lg:px-20 lg:py-20">
                 <div class="mx-auto w-full max-w-[1280px]">
                     <div class="grid grid-cols-1 gap-6 lg:grid-cols-3" data-animate>
                         <div
@@ -345,6 +345,55 @@
                     </div>
                 </div>
             </section>
+            
+            
+            <section
+                class="flex flex-col items-center justify-center bg-gray-50 bg-background-light px-4 py-20 dark:bg-[#0d121c] lg:px-20">
+                <div class="mx-auto flex w-full max-w-[1280px] flex-col gap-10">
+                    <div class="text-center">
+                        <h2 class="text-3xl font-black leading-tight text-text-dark dark:text-white sm:text-4xl">Nos
+                            Valeurs Fondamentales</h2>
+                        <p class="mt-4 text-text-grey dark:text-gray-400">Ce qui nous distingue sur le marché numérique.
+                        </p>
+                    </div>
+                    <div class="grid grid-cols-1 gap-8 md:grid-cols-3">
+                        <div class="flex flex-col items-center text-center gap-4 p-4">
+                            <div
+                                class="flex size-16 items-center justify-center rounded-full bg-white dark:bg-[#1a2230] text-primary mb-2 shadow-sm">
+                                <span class="material-symbols-outlined text-4xl">map</span>
+                            </div>
+                            <h3 class="text-xl font-bold text-text-dark dark:text-white">Expertise Locale</h3>
+                            <p class="text-sm text-text-grey dark:text-gray-400 leading-relaxed">
+                                Une compréhension profonde des défis techniques et infrastructurels spécifiques à la
+                                RDC, garantissant des solutions adaptées.
+                            </p>
+                        </div>
+                        <div class="flex flex-col items-center text-center gap-4 p-4">
+                            <div
+                                class="flex size-16 items-center justify-center rounded-full bg-white dark:bg-[#1a2230] text-primary mb-2 shadow-sm">
+                                <span class="material-symbols-outlined text-4xl">verified_user</span>
+                            </div>
+                            <h3 class="text-xl font-bold text-text-dark dark:text-white">Fiabilité Absolue</h3>
+                            <p class="text-sm text-text-grey dark:text-gray-400 leading-relaxed">
+                                Nous respectons scrupuleusement les délais et livrons des logiciels robustes, sécurisés
+                                et testés rigoureusement.
+                            </p>
+                        </div>
+                        <div class="flex flex-col items-center text-center gap-4 p-4">
+                            <div
+                                class="flex size-16 items-center justify-center rounded-full bg-white dark:bg-[#1a2230] text-primary mb-2 shadow-sm">
+                                <span class="material-symbols-outlined text-4xl">lightbulb</span>
+                            </div>
+                            <h3 class="text-xl font-bold text-text-dark dark:text-white">Innovation Continue</h3>
+                            <p class="text-sm text-text-grey dark:text-gray-400 leading-relaxed">
+                                L'utilisation des dernières technologies (Cloud, IA, Mobile) pour donner un avantage
+                                concurrentiel décisif à votre business.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
             <section class="bg-white dark:bg-background-dark px-4 py-16 lg:px-20 lg:py-24" data-animate>
                 <div class="mx-auto w-full max-w-[1280px]">
                     <div class="mx-auto flex max-w-3xl flex-col gap-4 text-center">
@@ -356,7 +405,6 @@
                             utilisateur.
                         </p>
                     </div>
-
                     <div class="mt-10 grid grid-cols-1 gap-8 sm:grid-cols-2 lg:grid-cols-4">
 
                         <div class="flex flex-col items-center text-center">
