--- a/carrieres.html
+++ b/carrieres.html
@@ -130,7 +130,7 @@
             </div>
             <a href="portfolio.html" class="block navbar-link py-2">Portfolio</a>
             <a href="apropos.html" class="block navbar-link py-2">À Propos</a>
-            <a href="carrieres.html" class="block navbar-link py-2">Carrières</a>
+            <a href="carrieres.html" class="block navbar-link py-2">Actualités</a>
             <button class="navbar-button w-full" onclick="window.location.href='nous_contacter.html'">Nous Contacter</button>
         </div>
     </div>
