--- a/communication_numerique.html
+++ b/communication_numerique.html
@@ -73,7 +73,7 @@
                     </div>
                     <a href="portfolio.html" class="navbar-link">Portfolio</a>
                     <a href="apropos.html" class="navbar-link">À Propos</a>
-                    <a href="carrieres.html" class="navbar-link">Carrières</a>
+                    <a href="carrieres.html" class="navbar-link">Actualités</a>
                 </nav>
 
                 <div class="flex items-center gap-4">
