--- a/solutions_de_securite.html
+++ b/solutions_de_securite.html
@@ -64,7 +64,7 @@
             </div>
             <a href="portfolio.html" class="navbar-link">Portfolio</a>
             <a href="apropos.html" class="navbar-link">À Propos</a>
-            <a href="carrieres.html" class="navbar-link">Carrières</a>
+            <a href="carrieres.html" class="navbar-link">Actualités</a>
         </nav>
         
         <div class="flex items-center gap-4">
@@ -237,7 +237,7 @@
                 </div>
             </div>
 
-            <div class="w-full bg-white dark:bg-background-dark py-16 px-4 md:px-10 lg:px-20 border-t border-gray-100 dark:border-gray-800" data-animate>
+            <div class="w-full bg-gray-50 dark:bg-background-dark py-16 px-4 md:px-10 lg:px-20 border-t border-gray-100 dark:border-gray-800" data-animate>
                 <div class="max-w-[1280px] mx-auto flex flex-col md:flex-row-reverse items-center gap-12">
                     <div class="flex-1 flex flex-col gap-6">
                         <div class="inline-flex items-center gap-2 px-3 py-1 rounded-full bg-blue-100 dark:bg-blue-900/30 w-fit">
@@ -384,9 +384,9 @@
             <div class="flex flex-col gap-6">
                 <h3 class="font-bold text-lg text-white">Liens Rapides</h3>
                 <nav class="flex flex-col gap-4">
-                    <a href="nos_services.html" class="text-gray-400 hover:text-[#FACC15] transition-colors text-sm">Nos Services</a>
+                    <a href="developpement_informatique.html" class="text-gray-400 hover:text-[#FACC15] transition-colors text-sm">Nos Services</a>
                     <a href="apropos.html" class="text-gray-400 hover:text-[#FACC15] transition-colors text-sm">Notre Histoire</a>
-                    <a href="#" class="text-gray-400 hover:text-[#FACC15] transition-colors text-sm">Melon-Academia</a>
+                    <a href="formation_professionnelle.html" class="text-gray-400 hover:text-[#FACC15] transition-colors text-sm">Melon-Academia</a>
                     <a href="apropos.html" class="text-gray-400 hover:text-[#FACC15] transition-colors text-sm">L'Équipe</a>
                 </nav>
             </div>
@@ -396,7 +396,7 @@
                 <h3 class="font-bold text-lg text-white">Services</h3>
                 <nav class="flex flex-col gap-4">
                     <a href="developpement_informatique.html" class="text-gray-400 hover:text-[#FACC15] transition-colors text-sm">Développement Web</a>
-                    <a href="developpement_informatique.html" class="text-gray-400 hover:text-[#FACC15] transition-colors text-sm">Applications Mobiles</a>
+                    <a href="carrieres.html" class="text-gray-400 hover:text-[#FACC15] transition-colors text-sm">Actualités</a>
                     <a href="solutions_de_securite.html" class="text-gray-400 hover:text-[#FACC15] transition-colors text-sm">Sécurité Réseaux</a>
                     <a href="communication_numerique.html" class="text-gray-400 hover:text-[#FACC15] transition-colors text-sm">Infographie Pro</a>
                 </nav>
